Added image name and flag to save lastModified time outside container

--- a/docker-compose-filter.yml
+++ b/docker-compose-filter.yml
@@ -4,9 +4,11 @@ services:
       build:
         context: .
         dockerfile: Dockerfile
+      image: geoipfilter
       volumes:
         - ${TRAEFIK_PROVIDER_DIR}:/rules
       environment:
         - MAXMIND_KEY=${MAXMIND_KEY}
         - COUNTRY_CODES=${COUNTRY_CODES}
+        - IS_LASTMODIFIED_LOCAL=false
       
