--- a/docker-compose-filter.yml
+++ b/docker-compose-filter.yml
@@ -10,4 +10,5 @@ services:
       environment:
         - MAXMIND_KEY=${MAXMIND_KEY}
         - COUNTRY_CODES=${COUNTRY_CODES}
+        - SUB_CODES=${SUB_CODES}
       
