--- a/.github/workflows/base-update-build.yml
+++ b/.github/workflows/base-update-build.yml
@@ -1,24 +1,22 @@
-name: Build on base image update
+name: If dependabot updates dockerfile then update image
 
 on:
-  schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
-  
+  pull_request_target:
+    types:
+      - closed
+    paths:
+      - 'Dockerfile'
+
 jobs:
   build:
+    if: |
+      github.event.pull_request.merged &&
+      github.event.pull_request.user.login == 'dependabot[bot]'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        
-      - name: Docker Image Update Checker
-        id: baseupdatecheck
-        uses: lucacome/docker-image-update-checker@v1.2.1
-        with:
-          base-image: library/nginx:alpine
-          image: mpdcampbell/traefik-geoip-filter
-
+       
       - name: Log in to Docker Hub
         if: steps.baseupdatecheck.outputs.needs-updating == 'true'
         uses: docker/login-action@v2
@@ -27,24 +25,18 @@ jobs:
           password: "${{ secrets.DOCKERHUB_PASSWORD }}"
 
       - name: Get Previous tag
-        if: steps.baseupdatecheck.outputs.needs-updating == 'true'
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          
-      - name: Get next patch version
-        if: steps.baseupdatecheck.outputs.needs-updating == 'true'
-        id: semvers
-        uses: "WyriHaximus/github-action-next-semvers@v1"
-        with:
-          version: ${{ steps.previoustag.outputs.tag }}
 
       - name: Build and push Docker image
         if: steps.baseupdatecheck.outputs.needs-updating == 'true'
         id: build-and-push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: mpdcampbell/traefik-geoip-filter:${{ steps.semvers.outputs.patch }}
+          tags: |
+            mpdcampbell/traefik-geoip-filter:${{ steps.previoustag.outputs.tag }}
+            mpdcampbell/traefik-geoip-filter:edge
