--- a/.github/workflows/base-update-build.yml
+++ b/.github/workflows/base-update-build.yml
@@ -7,13 +7,11 @@ on:
     branches:
       - 'develop'
     paths:
-      - '*/Dockerfile'
+      - 'Dockerfile'
 
 jobs:
   build:
-    if: |
-      github.event.pull_request.merged &&
-      github.event.pull_request.user.login == 'dependabot[bot]'
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
