Reverting debug commits

--- a/.github/workflows/base-update-build.yml
+++ b/.github/workflows/base-update-build.yml
@@ -1,7 +1,7 @@
 name: If dependabot updates dockerfile then update image
 
 on:
-  pull_request:
+  pull_request_target:
     types:
       - closed
     branches:
