--- a/.github/workflows/base-update-build.yml
+++ b/.github/workflows/base-update-build.yml
@@ -25,21 +25,21 @@ jobs:
             Dockerfile
 
       - name: Log in to Docker Hub if dockerfile changed
-        if: steps.changed-files-specific.outputs.any_changed == "true"
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
         uses: docker/login-action@v3
         with:
           username: "${{ secrets.DOCKERHUB_USERNAME }}"
           password: "${{ secrets.DOCKERHUB_PASSWORD }}"
 
       - name: Get Previous tag
-        if: steps.changed-files-specific.outputs.any_changed == "true"
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
         id: previoustag
         uses: "WyriHaximus/github-action-get-previous-tag@v1"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
 
       - name: Build and push Docker image
-        if: steps.changed-files-specific.outputs.any_changed == "true"
+        if: steps.changed-files-specific.outputs.any_changed == 'true'
         id: build-and-push
         uses: docker/build-push-action@v5
         with:
