Run build job after merge job
By default jobs run in parallel. Set build-push-image to run after
merge-dependabot-pr completes succesfully.

--- a/.github/workflows/approve-merge-build-push.yml
+++ b/.github/workflows/approve-merge-build-push.yml
@@ -32,6 +32,7 @@ jobs:
     
   build-push-image:
     runs-on: ubuntu-22.04
+    needs: merge-dependabot-pr
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     steps:
       - uses: actions/checkout@v4
