Change auth method for MaxMind downloads
MaxMind introduced breaking change to how direct downloads are
authenticated. Following changes:
- Account ID variable now required
- Basic Auth now used via curl -u
- Download URLs for databases changed
- Redirect added by MaxMind now requiring curl -L
Documentation also updated to reflect changes.

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -22,6 +22,7 @@ services:
      #volumes:
        #- /path/to/local/directory:/geoip
       environment:
+        - MAXMIND_ID="yourIDhere"
         - MAXMIND_KEY="yourKeyhere"
     #Set the filter to act as an allowlist or blocklist
         - FILTER_TYPE="allow"
